# simple-stock-order-sync

./: LICENSE  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 16035b90dd7c_create_initial_product_and_order_tables.py
app/: database.py  main.py  models.py  schemas.py
