[tool.poetry]
name = "simple-stock-order-sync"
version = "0.1.0"
description = "A backend automation tool to sync stock and process orders from CSV files, built with FastAPI, Celery, and PostgreSQL."
authors = ["Phú Đăng <phudang@tuoitre.com.vn>"]
license = "MIT"
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = ">=3.10"
fastapi = ">=0.116.1,<0.117.0"
uvicorn = {extras = ["standard"], version = ">=0.35.0,<0.36.0"}
sqlalchemy = ">=2.0.42,<3.0.0"
psycopg2-binary = ">=2.9.10,<3.0.0"
alembic = ">=1.16.4,<2.0.0"
python-dotenv = ">=1.1.1,<2.0.0"
pandas = ">=2.3.1,<3.0.0"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2" # Using a recent stable version
ruff = "^0.5.0"   # Using a recent stable version
pytest = "^8.2.2" # Using a recent stable version

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# --- Các cấu hình cho tool khác bạn có thể thêm lại ở đây ---
[tool.ruff]
line-length = 88
fix = true

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "C4"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true